@@ -9,20 +9,19 @@ import cn.opensrcdevelop.ai.vectorstore.chroma.ChromaConfigProperties;
 import cn.opensrcdevelop.auth.biz.service.system.SystemSettingService;
 import cn.opensrcdevelop.common.constants.CommonConstants;
 import cn.opensrcdevelop.common.exception.BizException;
+import cn.opensrcdevelop.common.exception.ServerException;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.ai.chroma.vectorstore.ChromaApi;
+import org.springframework.ai.chroma.vectorstore.ChromaApi.*;
+import org.springframework.ai.chroma.vectorstore.ChromaApi.Collection;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.stereotype.Service;
+
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.ai.chroma.vectorstore.ChromaApi;
-import org.springframework.ai.chroma.vectorstore.ChromaApi.AddEmbeddingsRequest;
-import org.springframework.ai.chroma.vectorstore.ChromaApi.Collection;
-import org.springframework.ai.chroma.vectorstore.ChromaApi.CreateCollectionRequest;
-import org.springframework.ai.chroma.vectorstore.ChromaApi.DeleteEmbeddingsRequest;
-import org.springframework.ai.chroma.vectorstore.ChromaApi.QueryRequest;
-import org.springframework.ai.chroma.vectorstore.ChromaApi.QueryResponse;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
-import org.springframework.stereotype.Service;
 
 @Slf4j
 @Service
@@ -30,26 +29,16 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorStoreService {
 
-    private static final String COLLECTION_PREFIX = "sample_sql_";
-
-    private static final String FIELD_ID = "id";
-
-    private static final String FIELD_ANSWER_ID = "answer_id";
-
-    private static final String FIELD_QUESTION = "question";
-
-    private static final String FIELD_SQL = "sql";
-
-    private static final String FIELD_DATA_SOURCE_ID = "data_source_id";
-
-    private static final String FIELD_CREATED_AT = "created_at";
-
     private final ChromaApi chromaApi;
-
     private final ChromaConfigProperties chromaConfigProperties;
-
     private final SystemSettingService systemSettingService;
 
+    /**
+     * 创建 Collection（如果不存在）
+     *
+     * @param tenantCode
+     *            租户 Code
+     */
     @Override
     public void createCollectionIfNotExists(String tenantCode) {
         String collectionName = COLLECTION_PREFIX + tenantCode;
@@ -63,76 +52,110 @@ public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorSto
                 createCollection(collectionName);
             }
         } catch (Exception e) {
-            // Collection 不存在，创建
             createCollection(collectionName);
         }
     }
 
+    /**
+     * 插入向量
+     *
+     * @param tenantCode
+     *            租户 Code
+     * @param sampleSqlDto
+     *            示例 SQL
+     * @param vector
+     *            向量
+     */
     @Override
     public void insert(String tenantCode, SampleSqlDto sampleSqlDto, List<Float> vector) {
         String collectionName = COLLECTION_PREFIX + tenantCode;
         createCollectionIfNotExists(tenantCode);
 
-        String collectionId = getCollectionId(tenantCode, collectionName);
-
         List<String> ids = List.of(sampleSqlDto.getId());
         List<float[]> embeddings = List.of(toFloatArray(vector));
-        List<Map<String, Object>> metadatas = List.of(buildMetadata(sampleSqlDto));
+        List<Map<String, Object>> metadata = List.of(buildMetadata(sampleSqlDto));
         List<String> documents = List.of(sampleSqlDto.getQuestion());
 
         chromaApi.upsertEmbeddings(
                 chromaConfigProperties.getTenantName(),
                 chromaConfigProperties.getDatabaseName(),
-                collectionId,
-                new AddEmbeddingsRequest(ids, embeddings, metadatas, documents));
+                getCollectionId(collectionName),
+                new AddEmbeddingsRequest(ids, embeddings, metadata, documents));
     }
 
+    /**
+     * 删除向量
+     *
+     * @param tenantCode
+     *            租户 Code
+     * @param answerId
+     *            回答 ID
+     */
     @Override
     public void deleteByAnswerId(String tenantCode, String answerId) {
         String collectionName = COLLECTION_PREFIX + tenantCode;
-        String collectionId = getCollectionId(tenantCode, collectionName);
 
         DeleteEmbeddingsRequest deleteRequest = new DeleteEmbeddingsRequest(
-                null, // ids 为空
-                Map.of("answer_id", Map.of("$eq", answerId))); // 使用 where 条件
+                null,
+                Map.of(FIELD_ANSWER_ID, Map.of("$eq", answerId)));
 
         chromaApi.deleteEmbeddings(
                 chromaConfigProperties.getTenantName(),
                 chromaConfigProperties.getDatabaseName(),
-                collectionId,
+                getCollectionId(collectionName),
                 deleteRequest);
     }
 
+    /**
+     * 删除向量
+     *
+     * @param tenantCode
+     *            租户 Code
+     * @param id
+     *            ID
+     */
     @Override
     public void deleteById(String tenantCode, String id) {
         String collectionName = COLLECTION_PREFIX + tenantCode;
-        String collectionId = getCollectionId(tenantCode, collectionName);
 
         DeleteEmbeddingsRequest deleteRequest = new DeleteEmbeddingsRequest(
-                List.of(id), // 使用 IDs
-                null); // where 为空
+                List.of(id),
+                null);
 
         chromaApi.deleteEmbeddings(
                 chromaConfigProperties.getTenantName(),
                 chromaConfigProperties.getDatabaseName(),
-                collectionId,
+                getCollectionId(collectionName),
                 deleteRequest);
     }
 
+    /**
+     * 删除所有向量
+     *
+     * @param tenantCode
+     *            租户 Code
+     */
     @Override
     public void deleteAll(String tenantCode) {
-        String collectionName = COLLECTION_PREFIX + tenantCode;
-
-        try {
-            chromaApi.deleteCollection(
-                    chromaConfigProperties.getTenantName(),
-                    chromaConfigProperties.getDatabaseName(),
-                    collectionName);
-        } catch (Exception e) {
-            log.warn("删除 Collection {} 失败", collectionName);
-        }
+        removeCollection(tenantCode);
     }
 
+    /**
+     * 搜索向量
+     *
+     * @param tenantCode
+     *            租户 Code
+     * @param dataSourceId
+     *            数据源 ID
+     * @param vector
+     *            查询向量
+     * @param threshold
+     *            相似度阈值
+     * @param topK
+     *            返回的最大结果数
+     * @return 搜索结果
+     */
+    @SuppressWarnings("java:S3776")
     @Override
     public List<SampleSqlDto> search(String tenantCode, String dataSourceId, List<Float> vector, double threshold,
             Integer topK) {
@@ -141,11 +164,16 @@ public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorSto
 
         int limit = Objects.nonNull(topK) && topK > 0 ? topK : 100;
 
-        String collectionId = getCollectionId(tenantCode, collectionName);
+        // 构建过滤条件
+        List<Map<String, Object>> conditions = new ArrayList<>();
+
+        if (StringUtils.isNotEmpty(dataSourceId)) {
+            conditions.add(Map.of(FIELD_DATA_SOURCE_ID, Map.of("$eq", dataSourceId)));
+        }
 
         Map<String, Object> where = null;
-        if (dataSourceId != null && !dataSourceId.isEmpty()) {
-            where = Map.of("data_source_id", Map.of("$eq", dataSourceId));
+        if (!conditions.isEmpty()) {
+            where = conditions.getFirst();
         }
 
         QueryRequest queryRequest = new QueryRequest(
@@ -156,7 +184,7 @@ public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorSto
         QueryResponse queryResponse = chromaApi.queryCollection(
                 chromaConfigProperties.getTenantName(),
                 chromaConfigProperties.getDatabaseName(),
-                collectionId,
+                getCollectionId(collectionName),
                 queryRequest);
 
         List<SampleSqlDto> results = new ArrayList<>();
@@ -167,16 +195,16 @@ public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorSto
             List<List<Map<String, Object>>> metadataList = queryResponse.metadata();
             List<List<String>> documentsList = queryResponse.documents();
 
-            if (idsList != null && !idsList.isEmpty()) {
-                List<String> ids = idsList.get(0);
-                List<Double> distances = distancesList != null && !distancesList.isEmpty()
-                        ? distancesList.get(0)
+            if (!idsList.isEmpty()) {
+                List<String> ids = idsList.getFirst();
+                List<Double> distances = !distancesList.isEmpty()
+                        ? distancesList.getFirst()
                         : null;
-                List<Map<String, Object>> metadatas = metadataList != null && !metadataList.isEmpty()
-                        ? metadataList.get(0)
+                List<Map<String, Object>> metadatas = !metadataList.isEmpty()
+                        ? metadataList.getFirst()
                         : null;
-                List<String> documents = documentsList != null && !documentsList.isEmpty()
-                        ? documentsList.get(0)
+                List<String> documents = !documentsList.isEmpty()
+                        ? documentsList.getFirst()
                         : null;
 
                 for (int i = 0; i < ids.size(); i++) {
@@ -209,33 +237,55 @@ public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorSto
         return results;
     }
 
+    /**
+     * 分页查询样本 SQL
+     *
+     * @param tenantCode
+     *            租户 Code
+     * @param dataSourceId
+     *            数据源 ID
+     * @param question
+     *            问题关键词过滤
+     * @param offset
+     *            偏移量
+     * @param limit
+     *            每页数量
+     * @return 分页查询结果列表
+     */
+    @SuppressWarnings("java:S3776")
     @Override
     public List<SampleSqlDto> list(String tenantCode, String dataSourceId, String question, long offset, int limit) {
         String collectionName = COLLECTION_PREFIX + tenantCode;
         createCollectionIfNotExists(tenantCode);
 
-        // Chroma 的 list API 使用 queryCollection 进行分页查询
-        String collectionId = getCollectionId(tenantCode, collectionName);
-
         // 构建过滤条件
-        Map<String, Object> where = new HashMap<>();
-        where.put("id", Map.of("$ne", ""));
-
-        if (dataSourceId != null && !dataSourceId.isEmpty()) {
-            where.put("data_source_id", Map.of("$eq", dataSourceId));
+        List<Map<String, Object>> conditions = new ArrayList<>();
+        if (StringUtils.isNotEmpty(dataSourceId)) {
+            conditions.add(Map.of(FIELD_DATA_SOURCE_ID, Map.of("$eq", dataSourceId)));
         }
-        if (question != null && !question.isEmpty()) {
-            where.put("question", Map.of("$contains", question));
+
+        if (StringUtils.isNotEmpty(question)) {
+            conditions.add(Map.of(FIELD_QUESTION, Map.of("$contains", question)));
+        }
+
+        // 构建 where 语句
+        Map<String, Object> where;
+        if (conditions.size() == 1) {
+            where = conditions.getFirst();
+        } else {
+            where = Map.of("$and", conditions);
         }
 
         // 使用 queryCollection 获取结果（传入空向量表示获取所有）
-        float[] emptyVector = new float[0];
-        QueryRequest queryRequest = new QueryRequest(emptyVector, (int) limit, where);
+        SampleSqlEmbeddingConfigDto embeddingConfig = systemSettingService.getSystemSetting(
+                SystemSettingConstants.SAMPLE_SQL_EMBEDDING_CONFIG, SampleSqlEmbeddingConfigDto.class);
+        float[] emptyVector = new float[embeddingConfig.getDimension()];
+        QueryRequest queryRequest = new QueryRequest(emptyVector, limit, where);
 
         QueryResponse queryResponse = chromaApi.queryCollection(
                 chromaConfigProperties.getTenantName(),
                 chromaConfigProperties.getDatabaseName(),
-                collectionId,
+                getCollectionId(collectionName),
                 queryRequest);
 
         List<SampleSqlDto> results = new ArrayList<>();
@@ -244,10 +294,10 @@ public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorSto
             List<List<Map<String, Object>>> metadataList = queryResponse.metadata();
             List<List<String>> documentsList = queryResponse.documents();
 
-            if (metadataList != null && !metadataList.isEmpty()) {
-                List<Map<String, Object>> metadatas = metadataList.get(0);
-                List<String> documents = documentsList != null && !documentsList.isEmpty()
-                        ? documentsList.get(0)
+            if (!metadataList.isEmpty()) {
+                List<Map<String, Object>> metadatas = metadataList.getFirst();
+                List<String> documents = !documentsList.isEmpty()
+                        ? documentsList.getFirst()
                         : null;
 
                 for (int i = 0; i < metadatas.size(); i++) {
@@ -271,21 +321,36 @@ public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorSto
         return results;
     }
 
+    /**
+     * 统计样本 SQL 数量
+     *
+     * @param tenantCode
+     *            租户 Code
+     * @param dataSourceId
+     *            数据源 ID
+     * @param question
+     *            问题关键词过滤
+     * @return 样本 SQL 数量
+     */
     @Override
     public long count(String tenantCode, String dataSourceId, String question) {
         String collectionName = COLLECTION_PREFIX + tenantCode;
         createCollectionIfNotExists(tenantCode);
 
-        String collectionId = getCollectionId(tenantCode, collectionName);
-
         Long count = chromaApi.countEmbeddings(
                 chromaConfigProperties.getTenantName(),
                 chromaConfigProperties.getDatabaseName(),
-                collectionId);
+                getCollectionId(collectionName));
 
         return count != null ? count : 0;
     }
 
+    /**
+     * 删除样本 SQL 集合
+     *
+     * @param tenantCode
+     *            租户 Code
+     */
     @Override
     public void removeCollection(String tenantCode) {
         String collectionName = COLLECTION_PREFIX + tenantCode;
@@ -295,6 +360,12 @@ public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorSto
                 collectionName);
     }
 
+    /**
+     * 创建样本 SQL 集合
+     *
+     * @param collectionName
+     *            集合名称
+     */
     private void createCollection(String collectionName) {
         SampleSqlEmbeddingConfigDto embeddingConfig = systemSettingService.getSystemSetting(
                 SystemSettingConstants.SAMPLE_SQL_EMBEDDING_CONFIG, SampleSqlEmbeddingConfigDto.class);
@@ -309,12 +380,23 @@ public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorSto
         log.info("Collection {} created successfully", collectionName);
     }
 
-    private String getCollectionId(String tenantCode, String collectionName) {
+    /**
+     * 获取集合ID
+     *
+     * @param collectionName
+     *            集合名称
+     * @return 集合ID
+     */
+    private String getCollectionId(String collectionName) {
         Collection collection = chromaApi.getCollection(
                 chromaConfigProperties.getTenantName(),
                 chromaConfigProperties.getDatabaseName(),
                 collectionName);
-        return collection.id();
+        if (Objects.nonNull(collection)) {
+            return collection.id();
+        } else {
+            throw new ServerException("Collection not found: " + collectionName);
+        }
     }
 
     private float[] toFloatArray(List<Float> vector) {
@@ -325,6 +407,13 @@ public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorSto
         return arr;
     }
 
+    /**
+     * 构建元数据
+     *
+     * @param sampleSqlDto
+     *            示例 SQL DTO
+     * @return 元数据
+     */
     private Map<String, Object> buildMetadata(SampleSqlDto sampleSqlDto) {
         Map<String, Object> metadata = new HashMap<>();
         metadata.put(FIELD_ID, sampleSqlDto.getId());
@@ -333,6 +422,7 @@ public class SampleSqlChromaVectorStoreServiceImpl implements SampleSqlVectorSto
         }
         metadata.put(FIELD_SQL, sampleSqlDto.getSql());
         metadata.put(FIELD_DATA_SOURCE_ID, sampleSqlDto.getDataSourceId());
+        metadata.put(FIELD_QUESTION, sampleSqlDto.getQuestion());
         metadata.put(FIELD_CREATED_AT, LocalDateTime.now()
                 .format(DateTimeFormatter.ofPattern(CommonConstants.LOCAL_DATETIME_FORMAT_YYYYMMDDHHMMSSSSS)));
         return metadata;
